# woopsa-rust

./: .coveralls.yml  .gitignore  Cargo.toml  README.md  TODO.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
assets/mml/core/: woopsa_0.1.1.dot
client/: Cargo.toml
client/src/: lib.rs
client/src/core/: client_type.rs  mod.rs
client/src/extension/: mod.rs  utils.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/extensions/: mod.rs  utils.rs
core/src/extensions/subscription/: channel.rs
core/src/json/: deserialization.rs  mod.rs  serialization.rs
core/src/protocol/: constant.rs  container.rs  element.rs  error_type.rs  link.rs  method.rs  method_argument_info.rs  mod.rs  object.rs  property.rs  struct_type.rs  url.rs  value.rs  value_type.rs  verb.rs
core/src/test/: container.rs  element.rs  mod.rs  object.rs  property.rs  value.rs
examples/: demo_client.rs  demo_server.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
http/: Cargo.toml
http/src/: lib.rs
http2/: Cargo.toml
http2/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/core/: check_request_type.rs  mod.rs  request_handler.rs  result_type.rs  server_type.rs
server/src/extension/: mod.rs  utils.rs
server/src/extension/subscription/: service.rs
src/: lib.rs
src/client/: client.rs
src/core/: container.rs  element.rs  error_type.rs  link.rs  method.rs  method_argument_info.rs  methodargumentinfo.rs  mod.rs  object.rs  property.rs  types.rs  value.rs  value_type.rs  verb.rs
src/extensions/: utils.rs
src/extensions/request/: mod.rs  multi.rs
src/extensions/subscription/: channel.rs  mod.rs  service.rs  wait_notification.rs
src/server/: server.rs
