[package]
name = "woopsa"
version = "0.1.1"
authors = ["Bianco Royal Developers <developers@bianco-royal.de>"]
repository = "https://github.com/BiancoRoyal/woopsa-rust.git"
license = "MPL-2.0"
description="A pure Rust library for Woopsa."
keywords = ["woopsa", "fieldbus", "iiot", "opcua", "automation"]
homepage = "https://bianco-royal.cloud/"
readme = "README.md"
edition = "2018"
build = "build.rs"

[build-dependencies]
mml = "0.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[badges]
travis-ci = { repository = "BiancoRoyal/woopsa-rust" }
coveralls = { repository = "BiancoRoyal/woopsa-rust", branch = "master", service = "github" }
