[package]
name = "woopsa"
version = "0.1.1"
authors = ["P4NR Support <support@p4nr.com>"]
repository = "https://github.com/BiancoRoyal/woopsa-rust.git"
license = "MPL-2.0"
description="A pure Rust library for Woopsa."
keywords = ["woopsa", "fieldbus", "iiot", "opcua", "automation"]
homepage = "https://p4nr.com/"
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[badges]
travis-ci = { repository = "BiancoRoyal/woopsa-rust" }
coveralls = { repository = "BiancoRoyal/woopsa-rust", branch = "master", service = "github" }
