[package]
name = "woopsa-http"
version = "0.1.0"
authors = ["P4NR Support <support@p4nr.com>"]
repository = "https://github.com/BiancoRoyal/woopsa-rust.git"
license = "MPL-2.0"
description="A pure Rust library for Woopsa on HTTP."
keywords = ["woopsa", "fieldbus", "iiot", "opcua", "automation", "bacnet", "modbus"]
homepage = "https://p4nr.com/"
readme = "README.md"
edition = "2018"

[dependencies]
actix-web = "1.0"

[dependencies.woopsa]
path = "../core"
version = "0.1"

[badges]
travis-ci = { repository = "BiancoRoyal/woopsa-rust" }
coveralls = { repository = "BiancoRoyal/woopsa-rust", branch = "master", service = "github" }
