[package]
name = "woopsa-client-example"
version = "0.1.0"
authors = ["Bianco Royal Developers <developers@bianco-royal.de>"]
repository = "https://github.com/BiancoRoyal/woopsa-rust.git"
license = "MPL-2.0"
description="A pure Rust Woopsa client."
keywords = ["woopsa", "fieldbus", "iiot", "opcua", "automation", "bacnet", "modbus"]
homepage = "https://bianco-royal.cloud/"
readme = "README.md"
edition = "2018"

[dependencies.woopsa]
path = "../../core"
version = "0.1"

[dependencies.woopsa-http]
path = "../../http"
version = "0.1"

[dependencies.woopsa-http2]
path = "../../http2"
version = "0.1"

[dependencies.woopsa-client]
path = "../../client"
version = "0.1"

[badges]
travis-ci = { repository = "BiancoRoyal/woopsa-rust" }
coveralls = { repository = "BiancoRoyal/woopsa-rust", branch = "master", service = "github" }
